--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.delight-im:Android-SimpleLocation:v1.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
     testCompile 'junit:junit:4.12'
 }
